crates/atlas-runtime/tests/corpus/fail/syntax_errors/missing_closing_brace.atlas
fn foo() -> number {
    return 42;

